pkg/main/default/objects/Recipient__c/fields/AccessCode__c.field-meta.xml
<CustomField>
    <fullName>AccessCode__c</fullName>
    <description>Access Code</description>
    <inlineHelpText>Access Code</inlineHelpText>
    <label>Access Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>