pkg/main/default/objects/Recipient__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>