pkg/main/default/objects/Recipient__c/fields/EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>EmailMessage__c</fullName>
    <label>Email Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>