pkg/main/default/objects/Recipient__c/fields/Envelope__c.field-meta.xml
<CustomField>
    <fullName>Envelope__c</fullName>
    <description>DocuSign Envelope</description>
    <inlineHelpText>DocuSign Envelope</inlineHelpText>
    <label>DocuSign Envelope</label>
    <referenceTo>Envelope__c</referenceTo>
    <relationshipLabel>DocuSign Envelope Recipients</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>