pkg/main/default/objects/Recipient__c/fields/EnvelopeRecipientId__c.field-meta.xml
<CustomField>
	<fullName>EnvelopeRecipientId__c</fullName>
	<externalId>true</externalId>
	<label>Envelope Recipient ID</label>
	<length>100</length>
	<type>Text</type>
</CustomField>