pkg/main/default/objects/Recipient__c/fields/HostName__c.field-meta.xml
<CustomField>
    <fullName>HostName__c</fullName>
    <label>Host Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>