pkg/main/default/objects/Recipient__c/fields/IdCheckRequired__c.field-meta.xml
<CustomField>
    <fullName>IdCheckRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>$ID Check</description>
    <label>ID Check Required</label>
    <type>Checkbox</type>
</CustomField>