pkg/main/default/objects/Recipient__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Note</description>
    <label>Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>