pkg/main/default/objects/Recipient__c/fields/RoleValue__c.field-meta.xml
<CustomField>
    <fullName>RoleValue__c</fullName>
    <label>Role Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>