pkg/main/default/objects/Recipient__c/fields/SmsPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SmsPhoneNumber__c</fullName>
    <label>SMS Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>