pkg/main/default/objects/Recipient__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type</description>
    <inlineHelpText>Type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signer</fullName>
                <default>true</default>
                <label>Needs to Sign</label>
            </value>
            <value>
                <fullName>InPersonSigner</fullName>
                <label>In Person Signer</label>
            </value>
            <value>
                <fullName>CarbonCopy</fullName>
                <label>Receives a Copy</label>
            </value>
            <value>
                <fullName>CertifiedDelivery</fullName>
                <label>Needs to View</label>
            </value>
            <value>
                <fullName>Agent</fullName>
                <label>Specify Recipients</label>
            </value>
            <value>
                <fullName>Editor</fullName>
                <label>Allow to Edit</label>
            </value>
            <value>
                <fullName>Intermediary</fullName>
                <label>Update Recipients</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>